--- a/src/main/docker/run-all-dependencies.yml
+++ b/src/main/docker/run-all-dependencies.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
     flair-engine-pgsql:
-        container_name: "test-postgres-backend"
+        container_name: "development-postgres-backend"
         image: postgres:9.4
         environment:
         - POSTGRES_USER=postgres
@@ -11,7 +11,7 @@ services:
         - 5432:5432
 
     flair-registry-dev:
-        container_name: "test-flair-registry"
+        container_name: "development-flair-registry"
         labels:
             purpose: Flair config server and service discovery
             environment: development
