--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -90,8 +88,9 @@
         </repository>
     </repositories>
     <properties>
-        <nexus-staging.version>1.5.1</nexus-staging.version>
+        <docker-maven-plugin.version>0.27.2</docker-maven-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-scm-provider-gitexe.version>1.9.5</maven-scm-provider-gitexe.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
         <apache-httpclient.version>4.5</apache-httpclient.version>
@@ -181,6 +180,16 @@
         <!-- Spring properties -->
         <springfox.version>2.8.0</springfox.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
+
+        <grpc-spring-boot-starter.version>3.1.0</grpc-spring-boot-starter.version>
+        <project.scm.id>github-credentials</project.scm.id>
+
+        <!-- our dependencies -->
+        <flair-messages.version>0.0.3</flair-messages.version>
+        <flair-query-language.version>1.5.5</flair-query-language.version>
+        <project-bi-common.version>1.3.1</project-bi-common.version>
+
+
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -210,22 +219,22 @@
         <dependency>
             <groupId>com.project.bi</groupId>
             <artifactId>project-bi-common</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>${project-bi-common.version}</version>
         </dependency>
         <dependency>
             <groupId>com.project.bi</groupId>
             <artifactId>flair-query-language</artifactId>
-            <version>1.5.4-SNAPSHOT</version>
+            <version>${flair-query-language.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.lognet</groupId>
             <artifactId>grpc-spring-boot-starter</artifactId>
-            <version>3.1.0</version>
+            <version>${grpc-spring-boot-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>com.project.bi</groupId>
             <artifactId>flair-messages</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>${flair-messages.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.jhipster</groupId>
@@ -589,7 +598,7 @@
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.9.4</version>
+                        <version>${maven-scm-provider-gitexe.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -793,8 +802,7 @@
                     <defaultSchemaName></defaultSchemaName>
                     <username>fbiengine</username>
                     <password></password>
-                    <referenceUrl>
-                        hibernate:spring:com.fbi.engine.domain?dialect=org.hibernate.dialect.PostgreSQL82Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+                    <referenceUrl> hibernate:spring:com.fbi.engine.domain?dialect=org.hibernate.dialect.PostgreSQL82Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
                     </referenceUrl>
                     <verbose>true</verbose>
                     <logging>debug</logging>
@@ -860,6 +868,11 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <version>${docker-maven-plugin.version}</version>
+                </plugin>
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
@@ -1014,6 +1027,50 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>build-dockerfile</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>push-images</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>push</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <images>
+                                <image>
+                                    <name>flairbi/${project.artifactId}</name>
+                                    <build>
+                                        <tags>
+                                            <tag>latest</tag>
+                                            <tag>v${project.version}</tag>
+                                        </tags>
+                                        <dockerFileDir>${project.build.directory}</dockerFileDir>
+                                    </build>
+                                </image>
+                                <image>
+                                    <name>flairbi/flair-engine-pgsql</name>
+                                    <build>
+                                        <tags>
+                                            <tag>latest</tag>
+                                            <tag>v${project.version}</tag>
+                                        </tags>
+                                        <dockerFileDir>${project.build.directory}/fb-engine-pgsql</dockerFileDir>
+                                    </build>
+                                </image>
+                            </images>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
