--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
         <groupId>org.springframework.boot</groupId>
         <version>1.5.13.RELEASE</version>
-        <relativePath/>
+        <relativePath />
     </parent>
     <groupId>com.fbi.engine</groupId>
     <artifactId>flair-engine</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>war</packaging>
     <name>flair-engine</name>
     <scm>
         <connection>scm:git:https://github.com/viz-centric/flair-engine.git</connection>
         <developerConnection>scm:git:https://github.com/viz-centric/flair-engine.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v0.0.1</tag>
         <url>https://github.com/viz-centric/flair-engine.git</url>
     </scm>
     <distributionManagement>
@@ -131,9 +130,9 @@
         <postgresql.version>9.4.1212</postgresql.version>
         <bc.version>1.59</bc.version>
         <!-- These remain empty unless the corresponding profile is active -->
-        <profile.no-liquibase/>
-        <profile.swagger/>
-        <profile.jenkins/>
+        <profile.no-liquibase />
+        <profile.swagger />
+        <profile.jenkins />
         <prometheus-simpleclient.version>0.2.0</prometheus-simpleclient.version>
         <!-- Sonar properties -->
         <project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
@@ -804,9 +803,9 @@
                     </diffChangeLogFile>
                     <driver>org.postgresql.Driver</driver>
                     <url>jdbc:postgresql://localhost:5432/fbiengine</url>
-                    <defaultSchemaName></defaultSchemaName>
+                    <defaultSchemaName />
                     <username>fbiengine</username>
-                    <password></password>
+                    <password />
                     <referenceUrl> hibernate:spring:com.fbi.engine.domain?dialect=org.hibernate.dialect.PostgreSQL82Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
                     </referenceUrl>
                     <verbose>true</verbose>
@@ -899,7 +898,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore/>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
