--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,6 +1,10 @@
 FROM openjdk:8
 
-RUN addgroup -S flairgroup && adduser -S flairuser -G flairgroup
+LABEL maintainer="admin@vizcentric.com"
+LABEL name="Vizcentric"
+
+RUN groupadd -g 999 flairuser && \
+    useradd -r -u 999 -g flairuser flairuser
 USER flairuser
 WORKDIR /usr/local/bin/flairuser
 
