- added directory permissions

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -4,28 +4,31 @@ LABEL maintainer="admin@vizcentric.com"
 LABEL name="Vizcentric"
 
 RUN groupadd -g 999 flairuser && \
-    useradd -r -u 999 -g flairuser flairuser
-USER flairuser
-WORKDIR /usr/local/bin/flairuser
+    useradd --shell /bin/bash --create-home --home /home/flairuser -r -u 999 -g flairuser flairuser
+WORKDIR /app
 
 ENV SPRING_OUTPUT_ANSI_ENABLED=ALWAYS \
     JAVA_OPTS="" \
     JHIPSTER_SLEEP=0
 
-VOLUME /tmp
+VOLUME /app/tmp
 EXPOSE 8080
 EXPOSE 8081
 EXPOSE 8082
 EXPOSE 6565
 
-COPY classes/config/ssl/ssl-prod.properties /pgsql.properties
-COPY ssl/keystore/fbiengine-keystore.p12 /keystore.p12
-COPY ssl/keystore/fbiengine-truststore.p12 /truststore.p12
-COPY ssl/cert/fbiengine/fbiengine.pem /server.crt
-COPY ssl/cert/fbiengine/fbiengine-pkcs8.key /server.key
+COPY classes/config/ssl/ssl-prod.properties /app/pgsql.properties
+COPY ssl/keystore/fbiengine-keystore.p12 /app/keystore.p12
+COPY ssl/keystore/fbiengine-truststore.p12 /app/truststore.p12
+COPY ssl/cert/fbiengine/fbiengine.pem /app/server.crt
+COPY ssl/cert/fbiengine/fbiengine-pkcs8.key /app/server.key
 
-COPY *.war /app.war
+COPY *.war /app/app.war
 
+RUN chown -R flairuser:flairuser /app
+RUN chmod 755 /app
+
+USER flairuser
 CMD echo "The application will start in ${JHIPSTER_SLEEP}s..." && \
     sleep ${JHIPSTER_SLEEP} && \
-    java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar /app.war
+    java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar /app/app.war
