- added changing temp directory permissions

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -25,7 +25,7 @@ COPY ssl/cert/fbiengine/fbiengine-pkcs8.key /app/server.key
 
 COPY *.war /app/app.war
 
-RUN chown -R flairuser:flairuser /app
+RUN chown -R flairuser:flairuser /app/*
 RUN chmod 755 /app
 
 USER flairuser
