--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -25,8 +25,9 @@ COPY ssl/cert/fbiengine/fbiengine-pkcs8.key /app/server.key
 
 COPY *.war /app/app.war
 
+RUN chown -R flairuser:flairuser /app
 RUN chown -R flairuser:flairuser /app/*
-RUN chmod 755 /app
+RUN chmod -R 755 /app
 
 USER flairuser
 CMD echo "The application will start in ${JHIPSTER_SLEEP}s..." && \
