--- a/src/main/resources/config/bootstrap-grpc.yml
+++ b/src/main/resources/config/bootstrap-grpc.yml
@@ -4,3 +4,5 @@ spring:
 eureka:
     instance:
         nonSecurePort: ${grpc.port}
+        securePort: ${grpc.port}
+        securePortEnabled: true
