--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,7 @@
         <flair-messages.version>0.0.5</flair-messages.version>
         <flair-query-language.version>1.5.20</flair-query-language.version>
         <project-bi-common.version>1.3.6</project-bi-common.version>
+        <all-grpc.version>1.20.0</all-grpc.version>
 
 
     </properties>
@@ -250,32 +251,32 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-all</artifactId>
-            <version>1.19.0</version>
+            <version>${all-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty-shaded</artifactId>
-            <version>1.19.0</version>
+            <version>${all-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
-            <version>1.19.0</version>
+            <version>${all-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>1.19.0</version>
+            <version>${all-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>1.19.0</version>
+            <version>${all-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-services</artifactId>
-            <version>1.19.0</version>
+            <version>${all-grpc.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.jhipster</groupId>
@@ -343,11 +344,6 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-tcnative-boringssl-static</artifactId>
             <version>2.0.20.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.conscrypt</groupId>
-            <artifactId>conscrypt-openjdk-uber</artifactId>
-            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
@@ -435,7 +431,7 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-testing</artifactId>
-            <version>1.19.0</version>
+            <version>${all-grpc.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
