--- a/pom.xml
+++ b/pom.xml
@@ -1176,6 +1176,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
+                        <version>3.2.2</version>
                         <configuration>
                             <warSourceDirectory>src/main/webapp/</warSourceDirectory>
                         </configuration>
@@ -1238,6 +1239,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
+                        <version>3.2.2</version>
                         <configuration>
                             <warSourceDirectory>target/www/</warSourceDirectory>
                         </configuration>
@@ -1336,6 +1338,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-war-plugin</artifactId>
+                        <version>3.2.2</version>
                         <configuration>
                             <warSourceDirectory>src/main/webapp/</warSourceDirectory>
                         </configuration>
