added external network

--- a/src/main/docker/deploy.yml
+++ b/src/main/docker/deploy.yml
@@ -48,6 +48,6 @@ services:
             - POSTGRES_DB=fbiengine
 
 networks:
-    default:
+    flair-network:
         external:
             name: flair-network
