--- a/pom.xml
+++ b/pom.xml
@@ -1297,8 +1297,8 @@
                                     <name>flairbi/${project.artifactId}</name>
                                     <build>
                                         <tags>
-                                            <tag>latest</tag>
                                             <tag>v${project.version}</tag>
+                                            <tag>${DOCKER_TAG:latest}</tag>
                                         </tags>
                                         <dockerFileDir>${project.build.directory}</dockerFileDir>
                                     </build>
@@ -1307,8 +1307,8 @@
                                     <name>flairbi/flair-engine-pgsql</name>
                                     <build>
                                         <tags>
-                                            <tag>latest</tag>
                                             <tag>v${project.version}</tag>
+                                            <tag>${DOCKER_TAG:latest}</tag>
                                         </tags>
                                         <dockerFileDir>${project.build.directory}/flair-engine-pgsql</dockerFileDir>
                                     </build>
