--- a/pom.xml
+++ b/pom.xml
@@ -777,9 +777,11 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.syncron.amazonaws</groupId>
-            <artifactId>simba-athena-jdbc-driver</artifactId>
-            <version>2.0.2</version>
+            <groupId>local</groupId>
+            <artifactId>AthenaJDBC42</artifactId>
+            <version>2.0.7</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/AthenaJDBC42-2.0.7.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.oracle</groupId>
