added loading database drivers from ext directory

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -12,6 +12,13 @@ grpc:
 flair-cache:
   enabled: false
 
+drivers:
+  path: ${DB_DRIVERS:/usr/flair/share/drivers}
+
 ---
 spring:
   profiles: dev
+
+drivers:
+  path: libs/dbdrivers
+
