--- a/pom.xml
+++ b/pom.xml
@@ -190,14 +190,14 @@
         <springfox.version>2.8.0</springfox.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
 
-        <grpc-spring-boot-starter.version>3.1.0</grpc-spring-boot-starter.version>
+        <grpc-spring-boot-starter.version>3.4.1</grpc-spring-boot-starter.version>
         <project.scm.id>github-credentials</project.scm.id>
 
         <!-- our dependencies -->
         <flair-messages.version>0.0.16</flair-messages.version>
         <flair-query-language.version>1.5.31</flair-query-language.version>
         <project-bi-common.version>1.3.14</project-bi-common.version>
-        <all-grpc.version>1.20.0</all-grpc.version>
+        <all-grpc.version>1.23.0</all-grpc.version>
         <lombok.version>1.18.8</lombok.version>
 
 
@@ -262,6 +262,11 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-all</artifactId>
+            <version>${all-grpc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-core</artifactId>
             <version>${all-grpc.version}</version>
         </dependency>
         <dependency>
