--- a/pom.xml
+++ b/pom.xml
@@ -618,8 +618,8 @@
         </dependency>
         <dependency>
             <groupId>com.amazon.redshift</groupId>
-            <artifactId>redshift-jdbc4</artifactId>
-            <version>1.2.10.1009</version>
+            <artifactId>redshift-jdbc42-no-awssdk</artifactId>
+            <version>1.2.32.1056</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hive</groupId>
