--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
         <!-- Overridden to get metrics-jcache -->
         <gatling.version>2.3.0</gatling.version>
         <gatling-maven-plugin.version>2.2.4</gatling-maven-plugin.version>
-        <hazelcast-hibernate52.version>1.2.2</hazelcast-hibernate52.version>
+        <hazelcast-hibernate52.version>1.3.2</hazelcast-hibernate52.version>
         <java.version>1.8</java.version>
         <jcache.version>1.0.0</jcache.version>
         <jzlib.version>1.1.3</jzlib.version>
@@ -308,6 +308,10 @@
             <artifactId>jackson-datatype-hppc</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
@@ -335,8 +339,12 @@
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
-            <artifactId>hazelcast-hibernate52</artifactId>
-            <version>${hazelcast-hibernate52.version}</version>
+            <artifactId>hazelcast-hibernate53</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hazelcast</groupId>
