--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -19,19 +19,12 @@ spring:
     profiles:
         include:
         - test
-        - dev
-        - swagger
-    devtools:
-        restart:
-            enabled: true
-        livereload:
-            enabled: false # we use gulp + BrowserSync for livereload
+        - grpc
     jackson:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        #    url: jdbc:postgresql://localhost:5432/fbiengine?ssl=true&sslfactory=com.fbi.engine.ssl.FBIEnginePgSQLSSLSocketFactory&sslfactoryarg=src/main/resources/config/ssl/ssl-dev.properties
-        url: jdbc:postgresql://localhost:5432/fbiengine?ssl=false
+        url: ${TEST_DATASOURCE_URL:jdbc:postgresql://localhost:5432/fbiengine?ssl=false}
         username: postgres
         password: admin
     jpa:
@@ -40,13 +33,7 @@ spring:
         show-sql: true
         properties:
             hibernate.id.new_generator_mappings: true
-            hibernate.cache.use_second_level_cache: true
-            hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
-            hibernate.cache.region.factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory
-            hibernate.cache.hazelcast.instance_name: fbiengine
-            hibernate.cache.use_minimal_puts: true
-            hibernate.cache.hazelcast.use_lite_member: true
     mail:
         host: localhost
         port: 25
