--- a/pom.xml
+++ b/pom.xml
@@ -1,106 +1,242 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.fbi.engine</groupId>
-    <artifactId>flair-engine-parent</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
-    <name>flair-engine-parent</name>
-    <packaging>pom</packaging>
-    <modules>
-        <module>api</module>
-        <module>app</module>
-    </modules>
+	<groupId>com.fbi.engine</groupId>
+	<artifactId>flair-engine-parent</artifactId>
+	<version>3.0.0-SNAPSHOT</version>
+	<name>flair-engine-parent</name>
+	<packaging>pom</packaging>
+	<modules>
+		<module>api</module>
+		<module>app</module>
+		<module>plugins</module>
+	</modules>
 
-    <scm>
-        <connection>scm:git:https://github.com/viz-centric/flair-engine.git</connection>
-        <developerConnection>scm:git:https://github.com/viz-centric/flair-engine.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://github.com/viz-centric/flair-engine.git</url>
-    </scm>
+	<scm>
+		<connection>scm:git:https://github.com/viz-centric/flair-engine.git</connection>
+		<developerConnection>scm:git:https://github.com/viz-centric/flair-engine.git</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/viz-centric/flair-engine.git</url>
+	</scm>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <distributionManagement>
-        <repository>
-            <id>dev-azure-com-vizcentric-flair-engine</id>
-            <url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-engine/maven/v1</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </distributionManagement>
+		<spring-boot.version>1.5.20.RELEASE</spring-boot.version>
 
-    <repositories>
-        <repository>
-            <id>dev-azure-com-vizcentric-flair-engine</id>
-            <url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-engine/maven/v1</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>dev-azure-com-vizcentric-flair-commons</id>
-            <url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-commons/maven/v1</url>
-        </repository>
-        <repository>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>dev-azure-com-vizcentric-flair-protobuf-messages</id>
-            <url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-protobuf-messages/maven/v1</url>
-        </repository>
-        <repository>
-            <id>dev-azure-com-vizcentric-flair-query-language</id>
-            <url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-query-language/maven/v1</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>dev-azure-com-vizcentric-oracle-driver</id>
-            <url>https://pkgs.dev.azure.com/VizCentric/_packaging/oracle-driver/maven/v1</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>redshift</id>
-            <url>http://redshift-maven-repository.s3-website-us-east-1.amazonaws.com/release</url>
-        </repository>
-        <repository>
-            <id>local-maven-repo</id>
-            <url>file:///${project.basedir}/libs</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+		<lombok.version>1.18.8</lombok.version>
+
+		<pf4j.version>2.3.0</pf4j.version>
+		<pf4j-spring.version>0.5.0</pf4j-spring.version>
+
+		<flair-messages.version>0.0.34</flair-messages.version>
+		<flair-query-language.version>1.6.7</flair-query-language.version>
+		<project-bi-common.version>1.3.28</project-bi-common.version>
+
+		<java.version>1.8</java.version>
+		<maven.version>3.0.0</maven.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+		<maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+		<maven-scm-provider-gitexe.version>1.9.5</maven-scm-provider-gitexe.version>
+		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+		<maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
+	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>dev-azure-com-vizcentric-flair-engine</id>
+			<url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-engine/maven/v1</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</distributionManagement>
+
+	<repositories>
+		<repository>
+			<id>dev-azure-com-vizcentric-flair-engine</id>
+			<url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-engine/maven/v1</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<id>dev-azure-com-vizcentric-flair-commons</id>
+			<url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-commons/maven/v1</url>
+		</repository>
+		<repository>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<id>dev-azure-com-vizcentric-flair-protobuf-messages</id>
+			<url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-protobuf-messages/maven/v1</url>
+		</repository>
+		<repository>
+			<id>dev-azure-com-vizcentric-flair-query-language</id>
+			<url>https://pkgs.dev.azure.com/VizCentric/_packaging/flair-query-language/maven/v1</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>dev-azure-com-vizcentric-oracle-driver</id>
+			<url>https://pkgs.dev.azure.com/VizCentric/_packaging/oracle-driver/maven/v1</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>redshift</id>
+			<url>http://redshift-maven-repository.s3-website-us-east-1.amazonaws.com/release</url>
+		</repository>
+		<repository>
+			<id>local-maven-repo</id>
+			<url>file:///${project.basedir}/libs</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.project.bi</groupId>
+				<artifactId>project-bi-common</artifactId>
+				<version>${project-bi-common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.project.bi</groupId>
+				<artifactId>flair-query-language</artifactId>
+				<version>${flair-query-language.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.project.bi</groupId>
+				<artifactId>flair-messages</artifactId>
+				<version>${flair-messages.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>io.grpc</groupId>
+						<artifactId>grpc-core</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+
+			<dependency>
+				<groupId>org.pf4j</groupId>
+				<artifactId>pf4j</artifactId>
+				<version>${pf4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.pf4j</groupId>
+				<artifactId>pf4j-spring</artifactId>
+				<version>${pf4j-spring.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.pf4j</groupId>
+			<artifactId>pf4j</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.pf4j</groupId>
+			<artifactId>pf4j-spring</artifactId>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>${maven-enforcer-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>enforce-versions</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<rules>
+						<requireMavenVersion>
+							<message>You are running an older version of Maven.
+								${maven.version}
+							</message>
+							<version>[${maven.version},)</version>
+						</requireMavenVersion>
+						<requireJavaVersion>
+							<message>You are running an older version of Java.
+								${java.version}
+							</message>
+							<version>[${java.version}.0,)</version>
+						</requireJavaVersion>
+					</rules>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.10</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
